# AEGrad

./: .gitignore  CLAUDE.md  case.py  development_plan.py  pyproject.toml
.github/workflows/: python-package-conda.yml  python_package.yml
_test_cases/aero/: compare_linear.py  linear_grad.py  static_cantilever.py
_test_cases/structure/: beam.py  beam_2_node.py  beam_2_node_test.py  two_node_beam.py
aegrad/: array_utils.py  constants.py  data_structures.py  print_output.py  print_utils.py  utils.py
aegrad/aero/: __init__.py  aic.py  case.py  constants.py  data_structures.py  flowfields.py  forcing.py  kernels.py  linear.py  linear_uvlm.py  utils.py  uvlm.py  uvlm_utils.py
aegrad/algebra/: __init__.py  array_utils.py  base.py  constants.py  integration.py  linear_operators.py  se3.py  so3.py  solvers.py  test_routines.py
aegrad/coupled/: __init__.py  coupled.py  data_structures.py
aegrad/plotting/: aerogrid.py  beam.py  pvd.py  structured_grid.py
aegrad/structure/: __init__.py  base_beam.py  beam.py  data_structures.py  gradients.py  solvers.py  structure.py  structure_utils.py  time_integration.py  utils.py
aegrad/tests/: algebra.py
aegrad/utils/: data_structures.py  print_utils.py  utils.py
models/: cantilever_wing.py  flying_spaghetti.py  geradin_beam.py
models/ifasd_aviation_2026/: cantilever_wing_adjoint.py  flying_spaghetti_adjoint.py  geradin_beam_adjoint.py
test_cases/: heaving_cantilever_var_wake.py
test_cases/aero/: static_cantilever.py
test_cases/structure/: beam.py
tests/: conftest.py
tests/aero/: test_linear_planar_wing.py  test_mirrored_wing.py  test_static_no_wake.py  test_variable_wake_disc.py
tests/algebra/: test_algebra.py  test_beam_algebra.py  test_kernels.py
tests/plotting/: test_beam_plot.py
(+96 files in other folders)
