[project]
name = "aegrad"
version = "0.1.0"
description = "Solver for automatic differentiation of UVLM/nonlinear beam aeroelastic simulations."
authors = ["Ben Preston"]
requires-python = "==3.12.*"
dependencies = [
    "jax==0.9.0.1",
    "pytest==9.0.2",
    "ruff==0.15.1",
    "tensorboard==2.20.0",
    "vtk==9.6.0",
    "xprof==2.21.6",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["./tests"]
python_files = ["test*.py"] # run all files ending with .py
addopts = "-q --tb=short"
