[project]
name = "aegrad"
version = "0.1.0"
description = "Solver for obtaining design variable sensitivites of UVLM/nonlinear beam aeroelastic simulations."
authors = [{ name = "Ben Preston" }]
requires-python = "==3.12.*"
dependencies = [
    "importlib-resources==7.1.0",
    "jax==0.9.2",
    "pytest==9.0.3",
    "ruff==0.15.10",
    "tensorboard==2.20.0",
    "vtk==9.6.1",
    "xprof==2.22.1",
]

[tool.setuptools.packages.find]
exclude = ["models*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["./tests"]
python_files = ["test*.py"]
addopts = "-q --tb=short"
